<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Runnier</string>
    <string name="title_parcours_detail">Parcours</string>
    <string name="parcours">Parcours</string>
    <string name="title_activity_trajet">Nouveau trajet</string>
    <string name="title_activity_trajet_detail">Nouveau trajet</string>
    <string name="title_activity_gps">Nouveau trajet</string>
    <string name="menu_trajet_action_new">Nouveau trajet</string>
    <string name="menu_parcours_action_new">Nouveau parcours</string>
    <string name="menu_parcours_action_settings">Paramètres</string>
    <string name="action_settings">Paramètres</string>
    <string name="best_time">Meilleur temps</string>
    <string name="average_time">Temps moyen</string>
    <string name="max_speed">Meilleure vitesse</string>
    <string name="average_speed">Vitesse moyenne</string>
    <string name="allure_moyenne">Allure moyenne</string>
    <string name="distance">Distance</string>
    <string name="list_label">Liste des trajets:</string>
    <string name="list_label_vide">Aucun trajet enregistré pour ce parcours</string>
    <string name="arrivee">Arrivée</string>
    <string name="depart">Départ</string>
    <string name="nouveauParcours">Nom du nouveau parcours</string>
    <string name="renommer">Renommer</string>
    <string name="annuler">Annuler</string>
    <string name="supprimer">Supprimer</string>
    <string name="valider">Valider</string>
    <string name="supprime">supprimé</string>
    <string name="modif_nom_parcours">Modifier le nom du parcours</string>
    <string name="modification_nom_parcours">Modification du parcours</string>
    <string name="definir_trajet_ref">Définir comme trajet de référence</string>
    <string name="telecharger_gpx">Télécharger le GPX</string>
    <string name="trajet_du">Trajet du</string>
    <string name="mis_en_ref">mis en référence</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="stop">STOP</string>
    <string name="dist_parcourue">Distance parcourue</string>
    <string name="allure">Allure</string>
    <string name="avance">Avance/Retard</string>
    <string name="temps">Temps</string>
    <string name="gps_active">GPS activé</string>
    <string name="gps_desactive">GPS désactivé</string>
    <string name="activer_gps">Veuillez activer le GPS</string>
    <string name="hello_world">Hello world!</string>

</resources>
