<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.75" >

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:id="@+id/textView"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="13dp"
                android:layout_weight="1"
                android:text="@string/temps" />

            <TextView
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:text="@string/allure"
                android:id="@+id/textView2"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="13dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.25" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:id="@+id/time"
                android:gravity="center_horizontal"
                android:textSize="30dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="0:00min/km"
                android:id="@+id/allure"
                android:gravity="center_horizontal"
                android:textSize="30dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.75">

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:text="@string/dist_parcourue"
                android:id="@+id/distance_title"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="13dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:text="@string/average_speed"
                android:id="@+id/speed_title"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="13dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.25">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="0,0km"
                android:id="@+id/distance"
                android:gravity="center_horizontal"
                android:textSize="30dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="0,0km/h"
                android:id="@+id/speed"
                android:gravity="center_horizontal"
                android:textSize="30dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

        <fragment
            android:id="@+id/map_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.10"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            />

</LinearLayout>